--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 body {
   -webkit-font-smoothing: antialiased;
 }
-.footer a {
+.footer a, .header a {
 	color: white;
 	text-decoration: none;
 }
